--- a/app/src/main/res/layout/activity_asignar_tutoria.xml
+++ b/app/src/main/res/layout/activity_asignar_tutoria.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DisplayTutor">
+    tools:context=".DisplayTutorActivity">
 
     <!-- Agrega los campos de entrada -->
 
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTutorCode" />
 
     <Button
-        android:id="@+id/asignarTutoria_display"
+        android:id="@+id/asignarTutoriaDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="220dp"
