--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Lab5_IOT" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/blue_background</item>
+        <item name="android:textColor">@color/white</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Lab5_IOT" parent="Base.Theme.Lab5_IOT" />
+    <style name="Theme.Lab5_IOT" parent="Base.Theme.Lab5_IOT">
+        <item name="colorPrimary">@color/blue_background</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="SnackbarStyle" parent="Widget.MaterialComponents.Snackbar">
+        <item name="android:backgroundTint">@color/white</item> <!-- Establece el fondo en blanco -->
+        <item name="android:text">@color/black</item>
+        <!-- Otros atributos de estilo aquí -->
+    </style>
 </resources>
