--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="blue_background">#0d266a</color>
     <color name="blue_contrast">#0C38B1</color>
     <color name="black">#FF000000</color>
+    <color name="gris">#535353</color>
     <color name="white">#FFFFFFFF</color>
     <color name="salmon">#f1554c</color>
 </resources>
