últimos cambios en vistas y actualizacion en métodos

--- a/app/src/main/res/drawable/shape_square.xml
+++ b/app/src/main/res/drawable/shape_square.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF" /> <!-- Color de fondo, en este caso, blanco -->
+    <solid android:color="#BFFFFFFF" /> <!-- Color de fondo, en este caso, blanco -->
     <corners android:radius="32dp" /> <!-- Radio de las esquinas, ajusta el valor según tus preferencias -->
 </shape>
