--- a/app/src/main/res/layout/activity_employee_main.xml
+++ b/app/src/main/res/layout/activity_employee_main.xml
@@ -7,6 +7,17 @@
     android:background="@color/blue_background"
     tools:context=".EmployeeMainActivity">
 
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="680dp"
+        android:layout_height="655dp"
+        android:layout_marginStart="-350dp"
+        android:layout_marginBottom="-50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/worker_icon"
+        app:tint="@color/blue_contrast" />
+
     <Button
         android:id="@+id/button8"
         style="?attr/materialIconButtonFilledStyle"
